force-app/main/default/objects/People__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Customer&#39;s email address</description>
    <inlineHelpText>Please enter the customer&#39;s email address.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>