force-app/main/default/objects/People__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Family</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Family Members</relationshipLabel>
    <relationshipName>People</relationshipName>
    <type>Lookup</type>
</CustomField>