force-app/main/default/objects/People__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <description>Customer&#39;s mailing address</description>
    <inlineHelpText>Please enter the customer&#39;s mailing address.</inlineHelpText>
    <label>Mailing Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>