force-app/main/default/objects/People__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <description>Customer&#39;s Mailing City</description>
    <inlineHelpText>Please enter the customer&#39;s mailing city.</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>