force-app/main/default/objects/People__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <description>Customer&#39;s Mailing State</description>
    <inlineHelpText>Please enter the customer&#39;s mailing state.</inlineHelpText>
    <label>State</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>