force-app/main/default/objects/People__c/fields/Mailing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_Code__c</fullName>
    <description>Customer&#39;s Mailing Zip Code</description>
    <inlineHelpText>Please enter the customer&#39;s mailing zip code.</inlineHelpText>
    <label>Zip Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>