force-app/main/default/objects/People__c/fields/Other_Address__c.field-meta.xml
<CustomField>
    <fullName>Other_Address__c</fullName>
    <description>Customer&#39;s Other Address</description>
    <inlineHelpText>Please enter the customer&#39;s other address.</inlineHelpText>
    <label>Other Address</label>
    <type>TextArea</type>
</CustomField>