force-app/main/default/objects/People__c/fields/Other_City__c.field-meta.xml
<CustomField>
    <fullName>Other_City__c</fullName>
    <description>Customer&#39;s City</description>
    <inlineHelpText>Please enter the customer&#39;s city.</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>