force-app/main/default/objects/People__c/fields/Other_State__c.field-meta.xml
<CustomField>
    <fullName>Other_State__c</fullName>
    <description>Customer&#39;s state</description>
    <inlineHelpText>Please enter the customer&#39;s state.</inlineHelpText>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>