force-app/main/default/objects/People__c/fields/Other_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Other_Zip_Code__c</fullName>
    <description>Customer&#39;s Zip Code</description>
    <inlineHelpText>Please enter the customer&#39;s zip code.</inlineHelpText>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>