force-app/main/default/objects/People__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <description>Customer&#39;s primary phone number</description>
    <inlineHelpText>Please enter the customer&#39;s primary phone number.</inlineHelpText>
    <label>Primary Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>