force-app/main/default/objects/People__c/fields/Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone__c</fullName>
    <description>Customer&#39;s secondary phone</description>
    <inlineHelpText>Please enter the customer&#39;s secondary phone number, if applicable.</inlineHelpText>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>